Working session management

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,27 +1,25 @@
 <%include header.ejs %>
-<div class="main-bg-login">
 
 	<div class="container-fluid">
         	<div id="login">	
 			<div class="login-wrapper" data-active="log">
 				<div id="log">
 					<div style="margin-top:20px">
-			            		<h1 class="center darker">Directory Administration</h1>
+			            		<h1 class="center darker">Belmont</h1>
 				            	<hr/>
-				            	<h3 class="center">Please login</h3>
 						</div>
 						<form role="form" id="login-form" class="form-horizontal" action="login" method="post">
 							<div class="row">
                 						<div class="form-group relative">
 					        	            	<div class="icon"><i class="icon20 i-user"></i></div>
-					                	       	<input class="form-control" type="text" name="user" id="user" placeholder="Username" value="">
+					                	       	<input class="form-control" type="text" name="user" id="user" placeholder="eMail" value="">
 	                                			</div><!-- End .control-group  -->
         	                				<div class="form-group relative">
 					                                <div class="icon"><i class="icon20 i-key"></i></div>
-                        	        				<input class="form-control" type="password" name="password" id="password" placeholder="Password" value="">                               
+                        	        				<input class="form-control" type="password" name="password" id="password" placeholder="Mot de passe" value="">                               
 								</div><!-- End .control-group  -->
 						                <div class="form-group relative">
-                                					<button id="loginBtn" type="submit" class="btn btn-primary pull-right col-lg-5">Login</button>
+                                					<button id="loginBtn" type="submit" class="btn btn-primary pull-right col-lg-5">Connection</button>
 				                        	</div>
 							</div><!-- End .row-fluid  -->
 						</form>
