--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,52 @@
 <%include header.ejs %>
-<div class="title">
-    <%= title %>
+<%include nav.ejs %>
+
+<div class="container-fluid">
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+	<div class="panel panel-default">
+  		<div class="panel-heading">
+  			<h1 class="panel-title">Thermometre interieur</h1>
+  		</div>
+  		<div class="panel-body">
+  			<canvas id="interieur" width="60" height="400">Canvas not available.</canvas>
+  		</div>
+  		<div class="panel-footer"><i>Ce Thermometre est actuellement dans le fond de l'armoire electrique</i></div>
+  	</div>
+
+  </div>
+  <div class="col-md-5">
+	<div class="panel panel-default">
+  		<div class="panel-heading">
+  			<h1 class="panel-title">Thermometre exterieur</h1>
+		</div>
+  		<div class="panel-body">
+  			<canvas id="exterieur" width="60" height="400">Canvas not available.</canvas>
+		</div>
+		<div class="panel-footer"><i>Ce Thermometre pendouille dans le couloir. Il represente pour l'instant la température à l'interieur du chalet</i></div>  		
+  	</div>
 </div>
+</div>
+
+<script src="js/thermo-ui.js"></script>
+<script>
+
+function maj() 
+{
+	$.get('/thermos/interieur', function(data, status) {
+		drawThermo('interieur', "rgb(255,0,0)", data);
+	});
+
+	$.get('/thermos/exterieur', function(data, status) {
+		drawThermo('exterieur', "rgb(255,0,0)", data);
+	});		
+}
+
+$(document).ready(function() {
+	maj();
+	setInterval(maj, 10000);
+});
+
+</script>
+
 <%include footer.ejs%>
