Make the test screen work even without internet. Correct the thermos usage interieur <=> exterieur

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
   		<div class="panel-body">
   			<canvas id="interieur" width="60" height="400">Canvas not available.</canvas>
   		</div>
-  		<div class="panel-footer"><i>Ce Thermometre est actuellement dans le fond de l'armoire electrique</i></div>
+  		<div class="panel-footer"><i>Ce Thermometre est installé dans le couloir entre les deux portes de l'armoire electique</i></div>
   	</div>
 
   </div>
@@ -23,7 +23,7 @@
   		<div class="panel-body">
   			<canvas id="exterieur" width="60" height="400">Canvas not available.</canvas>
 		</div>
-		<div class="panel-footer"><i>Ce Thermometre pendouille dans le couloir. Il represente pour l'instant la température à l'interieur du chalet</i></div>  		
+		<div class="panel-footer"><i>Ce Thermometre est au fond de l'armoire electrique</i></div>  		
   	</div>
 </div>
 </div>
