--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -16,6 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/">Temperatures</a></li>
+        <li><a href="/test">Lecture directe</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
