--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,35 +3,40 @@
 
 <div class="container-fluid">
 <div class="row">
-  <div class="col-md-5 col-md-offset-1">
-	<div class="panel panel-default">
-  		<div class="panel-heading">
-  			<h1 class="panel-title">Thermometre interieur</h1>
-  		</div>
-  		<div class="panel-body">
-  			<canvas id="interieur" width="60" height="400">Canvas not available.</canvas>
-  		</div>
-  		<div class="panel-footer"><i>Ce Thermometre est installé dans le couloir entre les deux portes de l'armoire electique</i></div>
-  	</div>
-
+  <div class="col-md-2">
+  	<div class="panel panel-default">
+  		<div class="panel-heading"><h1 class="panel-title">Thermometre interieur</h1></div>
+      <div class="panel-body"><canvas id="interieur" width="60" height="400">Canvas not available.</canvas></div>
+    </div>
   </div>
-  <div class="col-md-5">
-	<div class="panel panel-default">
-  		<div class="panel-heading">
-  			<h1 class="panel-title">Thermometre exterieur</h1>
-		</div>
-  		<div class="panel-body">
-  			<canvas id="exterieur" width="60" height="400">Canvas not available.</canvas>
-		</div>
-		<div class="panel-footer"><i>Ce Thermometre est au fond de l'armoire electrique</i></div>  		
+  <div class="col-md-2">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h1 class="panel-title">Thermometre exterieur</h1></div>
+  		<div class="panel-body"><canvas id="exterieur" width="60" height="400">Canvas not available.</canvas></div>
   	</div>
+  </div>
+  <div class="col-md-8">
+      <div id='courbe'></div>
+  </div>
 </div>
 </div>
+
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/data.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 <script src="js/thermo-ui.js"></script>
+
 <script>
 
-function maj() 
+function maj_courbe()
+{
+  $.get('/thermos/interieur/history', function(data, status) {
+    drawHisto('courbe', data);
+  });
+}
+
+function maj_thermo() 
 {
 	$.get('/thermos/interieur', function(data, status) {
 		drawThermo('interieur', "rgb(255,0,0)", data);
@@ -43,8 +48,10 @@ function maj()
 }
 
 $(document).ready(function() {
-	maj();
-	setInterval(maj, 10000);
+	maj_thermo();
+  maj_courbe();
+	setInterval(maj_thermo, 10000);
+  setInterval(maj_courbe, 100000);
 });
 
 </script>
